--- a/docs/_themes/bootstrap/static/sphinx-bootstrap.css
+++ b/docs/_themes/bootstrap/static/sphinx-bootstrap.css
@@ -179,3 +179,97 @@ input[type="submit"].active, input[type="submit"]:active {
     -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
+
+#menubar {
+    height: 100px;
+    background-color: #4b9484 !important;
+    background-image: none;
+}
+
+#logo {
+    padding-top: 21px;
+}
+
+#menubar #navul {
+    margin-top: 26px;
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
+#menubar #navul a {
+    padding-bottom: 14px;
+    padding-left: 21px;
+    padding-right: 21px;
+    padding-top: 14px;
+    color: #fff;
+    
+    -webkit-transition: background 0.2s linear;
+    -moz-transition: background 0.2s linear;
+    -ms-transition: background 0.2s linear;
+    -o-transition: background 0.2s linear;
+    transition: background 0.2s linear;
+    
+    font-family: 'Soho Gothic W01 Medium', Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    text-shadow: none;
+    text-transform:capitalize;
+}
+
+#menubar #navul a:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+#navsidebar ul {
+    text-transform:capitalize;
+    font-size: 16px;
+    font-family: lato, Helvetica, Arial, sans-serif;
+}
+
+#navsidebar #navul a:hover {
+    text-decoration: underline;
+    background-color: white;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Soho Gothic W01 Medium', Helvetica, Arial, sans-serif;
+}
+
+p {
+    font-family: lato, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+}
+
+@media all and (max-width: 767px) {
+    #menubar, .footer {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
+    
+    .footer {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media all and (max-width: 849px) {
+    #menubar #navul {
+        display: none;
+    }
+    
+    #navsidebar {
+        display: block;
+    }
+}
+
+@media all and (min-width: 850px) {
+    #navsidebar {
+        display: none;
+    }
+}
+
+#search {
+    width: 100%;
+}
