Add navigation to bottom of docs pages

--- a/docs/_themes/bootstrap/static/sphinx-bootstrap.css
+++ b/docs/_themes/bootstrap/static/sphinx-bootstrap.css
@@ -42,7 +42,6 @@ code, pre {
 
 span.pre {
     font-family: monospace;
-    color: #007000;
 }
 
 div.admonition {
@@ -281,4 +280,8 @@ p {
 .sphinxsidebarwrapper>ul {
     list-style-type: none;
     margin-left: 0;
+}
+
+.pagination {
+    text-transform: capitalize;
 }
