Wrap long words in sidebar

--- a/docs/_themes/bootstrap/static/sphinx-bootstrap.css
+++ b/docs/_themes/bootstrap/static/sphinx-bootstrap.css
@@ -283,6 +283,7 @@ p {
 .sphinxsidebarwrapper>ul {
     list-style-type: none;
     margin-left: 0;
+    word-break: break-word;
 }
 
 .pagination, .btn-group {
