--- a/docs/_themes/bootstrap/static/sphinx-bootstrap.css
+++ b/docs/_themes/bootstrap/static/sphinx-bootstrap.css
@@ -239,7 +239,7 @@ h1, h2, h3, h4, h5 {
     font-family: 'Soho Gothic W01 Medium', Helvetica, Arial, sans-serif;
 }
 
-p {
+body {
     font-family: lato, Helvetica, Arial, sans-serif;
     font-size: 16px;
 }
@@ -284,6 +284,7 @@ p {
     list-style-type: none;
     margin-left: 0;
     word-break: break-word;
+    font-size: 14px;
 }
 
 .pagination, .btn-group {
